# mate-applet-lockkeys

./: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  TODO  autogen.sh  configure.ac  mate-applet-lockkeys.spec.in
images/: Makefile.am  applet_lockkeys_numlock_off.xpm
m4/: gtk-2.0.m4
po/: LINGUAS  Makefile.in  Makevars  bg_BG.po  de_DE.po  en_GB.po  en_US.po  hu_HU.po  lockkeys.pot  mate-applet-lockkeys.pot  ru_RU.po  sv_SV.po
po/bg_BG/: bg_BG.po  lockkeys.po
po/en_UK/: en_US.po
po/en_US/: lockkeys.po
po/hu_HU/: hu_HU.po
po/ru_RU/: lockkeys.po
src/: Makefile.am  Makefile.in  Makefile.new  applet.h  lockkeys-applet-menu.xml  main.c  org.mate.applets.LockkeysApplet.mate-panel-applet.in  org.mate.panel.applet.LockkeysApplet.gschema.xml.in  org.mate.panel.applet.LockkeysApplet.service.in
src/images/: applet_lockkeys_capslock_off.xpm  applet_lockkeys_capslock_on.xpm  applet_lockkeys_numlock_on.xpm  applet_lockkeys_scrolllock_off.xpm  applet_lockkeys_scrolllock_on.xpm
